--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -125,7 +125,7 @@ afterEvaluate {
     }
 
     buildDeb {
-        arch = 'amd64'
+        arch = 'all'
         archiveName "${packageName}-${version}.deb"
         dependsOn 'assemble'
     }
