--- a/.github/workflows/sql-release-workflow.yml
+++ b/.github/workflows/sql-release-workflow.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - 'v*'
+    branches:
+      - "new"
 
 jobs:
   build:
@@ -33,11 +35,5 @@ jobs:
       - name: Run build
         run: |
           ./gradlew build buildDeb buildRpm --no-daemon --refresh-dependencies --console=plain -Dbuild.snapshot=false -x doctest:doctest
-          artifact=`ls plugin/build/distributions/*.zip`
-          rpm_artifact=`ls plugin/build/distributions/*.rpm`
           deb_artifact=`ls plugin/build/distributions/*.deb`
-          
-          aws s3 cp $artifact s3://artifacts.opendistroforelasticsearch.amazon.com/downloads/elasticsearch-plugins/opendistro-sql/
-          aws s3 cp $rpm_artifact s3://artifacts.opendistroforelasticsearch.amazon.com/downloads/rpms/opendistro-sql/
-          aws s3 cp $deb_artifact s3://artifacts.opendistroforelasticsearch.amazon.com/downloads/debs/opendistro-sql/
-          aws cloudfront create-invalidation --distribution-id E1VG5HMIWI4SA2 --paths "/downloads/*"
+          aws s3 cp $deb_artifact s3://staging.artifacts.opendistroforelasticsearch.amazon.com/repos/all-old-debs/
